--- a/performance.tex
+++ b/performance.tex
@@ -13,8 +13,8 @@ Many people assume that teachers are born, not made. From politicians to
 researchers and teachers themselves, most reformers have designed
 systems to find and promote those who can teach and eliminate those who
 can't. As Elizabeth Green describes in
-\emph{\href{http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393081591/}{Building
-a Better Teacher}}, though, that assumption is wrong, which is why
+\textit{Building a Better Teacher} \cite{bib:green-babt}, though,
+that assumption is wrong, which is why
 educational reforms based on it have repeatedly failed.
 
 The book is written as a history of the people who have put that puzzle
@@ -130,12 +130,9 @@ combine that with the theory they've learned in education school to
 deliver an actual lesson in an actual classroom for actual students.
 
 Fincher and her colleagues studied how teaching practices are actually
-transferred using both
-\href{\{\{\%20page.root\%20\}\}/files/papers/fincher-warrens-questions-2007.pdf}{a
-detailed case study} and
-\href{\{\{\%20page.root\%20\}\}/files/papers/fincher-stories-change-2012.pdf}{analysis
-of change stories}. The abstract of the latter paper sums up their
-findings:
+transferred using both a detailed case study \cite{bib:fincher-warrens-questions}
+and analysis of change stories \cite{bib:fincher-stories-change}.
+The abstract of the latter paper sums up their findings:
 
 \begin{quote}
 Innovative tools and teaching practices often fail to be adopted by
@@ -152,9 +149,7 @@ occurred locally, without input from outside sources, or involved only
 personal interaction with other educators.
 \end{quote}
 
-As reported in
-\href{\{\{\%20page.root\%20\}\}/files/papers/barker-practice-adoption-2015.pdf}{this
-paper}, Barker et al found something similar in 2015:
+Barker et al found something similar in 2015 \cite{bib:barker-practice-adoption}:
 
 \begin{quote}
 Adoption is not a ``rational action,'' however, but an iterative series
@@ -334,8 +329,8 @@ self-critical person, it's OK to remind yourself that:
 
 \begin{challenge}{Feedback on Feedback}{chal:feedback-on-feedback}
 
-Watch either \href{https://vimeo.com/139316669}{this video} (8:40) or
-\href{https://vimeo.com/139181120}{this one} (11:42). Take notes about
+Watch either \href{https://vimeo.com/139316669}{this video} or
+\href{https://vimeo.com/139181120}{this one}. Take notes about
 the presentation, and divide those into four groups based on whether
 they are positive or negative and whether they are about the content
 (what was said) or the presentation (how it was said, e.g., body
@@ -353,12 +348,10 @@ previous challenge.
 \begin{challenge}{Learn More About Feedback}{chal:learn-more-about-feedback}
 
 Read Gormally et al's
-``\href{\{\{\%20page.root\%20\}\}/files/papers/gormally-teaching-feedback-2014.pdf}{Feedback
-about Teaching in Higher Ed}'' and discuss ways you could make
-peer-to-peer feedback a routine part of your teaching. You may also
-enjoy Gawande's
-``\href{http://www.newyorker.com/magazine/2011/10/03/personal-best}{Personal
-Best}'', which looks at the value of having a coach.
+``Feedback about Teaching in Higher Ed'' \cite{bib:gormally-teaching-feedback}
+and discuss ways you could make peer-to-peer feedback a routine part of your teaching.
+You may also enjoy Gawande's ``Personal Best'' \cite{bib:gawande-personal-best},
+which looks at the value of having a coach.
 \end{challenge}
 
 \begin{challenge}{Fill In Minute Cards}{chal:fill-in-minute-cards}
