--- a/practices.tex
+++ b/practices.tex
@@ -90,7 +90,7 @@ raise their hands because:
   the class is in.
 \end{itemize}
 \item[Minute cards.]
-As explained \href{\{\{\%20page.root\%20\}\}/06-summarize/}{yesterday},
+As explained in \secref{FIXME},
 we also use sticky notes as minute cards: before each coffee or meal
 break, learners take a minute to write one positive thing on the green
 sticky note (e.g., one thing they've learned that they think will be
@@ -144,9 +144,8 @@ what the instructor predicted would be new. Finally, scanning the
 Etherpad is a good way for an instructor to discover that the class
 didn't hear something important, or misunderstood it.
 \item[Pair programming.]
-Pairing is a good practice in real life, and also
-\href{\{\{\%20page.root\%20\}\}/files/papers/porter-what-works-2013.pdf}{a
-good way to teach}. Partners can not only help each other out during the
+Pairing is a good practice in real life, and also a
+good way to teach \cite{bib:porter-what-works}. Partners can not only help each other out during the
 practical, but can also clarify each other's misconceptions when the
 solution is presented, and discuss common research interests during
 breaks. To facilitate this, we strongly prefer flat (dinner-style)
@@ -170,7 +169,7 @@ This can be a valuable resource when preparing lessons, especially when
 teaching a lesson for the first time.\\The Software Carpentry instructor
 guides are linked on each lesson page; the instructor guides for Data
 Carpentry lessons are on their
-\href{\{\{\%20site.dc\_site\%20\}\}/lessons/}{main lesson page}.
+main lesson page.
 \end{description}
 
 \subsection{The Code of Conduct}\label{the-code-of-conduct}
@@ -184,10 +183,8 @@ instructor and other partipants may make more of an impression on a
 novice learner than any ``technical'' topic you teach.
 
 To support this mission Software Carpentry and Data Carpentry have a
-shared code of conduct (online
-\href{\{\{\%20site.swc\_site\%20\}\}/conduct/}{here} and
-\href{\{\{\%20site.dc\_site\%20\}\}/code-of-conduct/}{here}) and
-participants in our workshops are required to abide by it. Hosts
+shared code of conduct that
+participants in our workshops are required to abide by. Hosts
 \emph{must} point people at it during registration, and instructors
 \emph{must} remind attendees of it at the start of the workshop. The
 Code of Conduct doesn't just tell everyone what the rules are: it tells
@@ -245,8 +242,8 @@ themselves than contributing written material.
 
 The second answer is that doing significantly outperforms watching.
 Specifically, a
-\href{\{\{\%20site.github.url\%20\}\}/files/papers/koedinger-doing-watching-2015.pdf}{recent
-paper by Koedinger et al} estimated ``\ldots{}the learning benefit from
+recent paper by Koedinger et al \cite{bib:koedinger-doing-watching}
+estimated ``\ldots{}the learning benefit from
 extra doing (1 SD increase) to be more than six times that of extra
 watching or reading.'' \emph{Doing}, in this case, refers to completing
 an interactive or mimetic task with feedback, while \emph{benefit}
