--- a/reference.tex
+++ b/reference.tex
@@ -421,100 +421,79 @@ it.
 \begin{description}
 \itemsep1pt\parskip0pt\parsep0pt
 \item[Baume:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/baume-learning-outcomes-2009.pdf}{Writing
-and Using Good Learning Outcomes}'']
+``Writing and Using Good Learning Outcomes'']
 A useful detailed guide to constructing useful learning outcomes.
 \item[Borrego and Henderson:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/borrego-henderson-change-strategies-2014.pdf}{Increasing
-the Use of Evidence-Based Teaching in STEM Higher Education: A
-Comparison of Eight Change Strategies}'']
+``Increasing the Use of Evidence-Based Teaching in STEM Higher Education: A Comparison of Eight Change Strategies'']
 Describes eight approaches to effecting change in STEM education that
 form a useful framework for thinking about how Software Carpentry and
 Data Carpentry can change the world.
 \item[Brown and Altadmri:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/brown-educator-vs-learner-beliefs-2014.pdf}{Investigating
-Novice Programming Mistakes: Educator Beliefs vs Student Data}'']
+``Investigating Novice Programming Mistakes: Educator Beliefs vs Student Data'']
 Compares teachers' opinions about common programming errors with data
 from over 100,000 students, and finds only weak consensus amongst
 teachers and between teachers and data.
 \item[Carroll, Smith-Kerker, Ford, and Mazur-Rimetz:
-``\href{http://dx.doi.org/10.1207/s15327051hci0302\_2}{The Minimal
-Manual}'' \emph{Human--Computer Interaction}, 3:2, 123-153, 1987.]
+``The Minimal Manual'' \emph{Human--Computer Interaction}, 3:2, 123-153, 1987.]
 Outlines an approach to documentation and instruction in which each
 lesson is one page long and describes how to accomplish one concrete
 task. Its focus on immediate application, error recognition and
 recovery, and reference use after training makes it an interesting model
 for Software and Data Carpentry.
 \item[Crouch and Mazur:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/crouch-mazur-peer-instruction-ten-years-2001.pdf}{Peer
-Instruction: Ten Years of Experience and Results}'']
+``Peer Instruction: Ten Years of Experience and Results'']
 An early report on peer instruction and its effects in the classroom.
 \item[Deans for Impact:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/science-of-learning-2015.pdf}{The
-Science of Learning}'']
+``The Science of Learning'']
 Summarizes cognitive science research related to how students learn, and
 connects it to practical implications for teaching and learning.
 \item[Guzdial:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-mediacomp-retrospective-2013.pdf}{Exploring
-Hypotheses about Media Computation}'']
+``Exploring Hypotheses about Media Computation'']
 A look back on 10 years of media computation research.
 \item[De Bruyckere et al:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/de-bruyckere-urban-myths-2015.pdf}{Urban
-Myths About Learning and Education}'']
+``Urban Myths About Learning and Education'']
 A one-page summary drawn from their book of the same name.
 \item[Gormally et al:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/gormally-teaching-feedback-2014.pdf}{Feedback
-about Teaching in Higher Ed: Neglected Opportunities to Promote
-Change}'']
+``Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change'']
 Summarizes best practices for providing instructional feedback and
 recommends specific strategies for sharing instructional expertise.
 \item[Guzdial:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-why-hard-to-teach-2011.pdf}{Why
-Programming is Hard to Teach}'']
+``Why Programming is Hard to Teach'']
 A chapter from
 \emph{\href{http://www.amazon.com/Making-Software-Really-Works-Believe/dp/0596808321/}{Making
 Software}} that explores why programming seems so much harder to teach
 than some other standard subjects.
 \item[Kirschner et al:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/kirschner-minimal-guidance-fails-2006.pdf}{Why
-Minimal Guidance During Instruction Does Not Work: An Analysis of the
-Failure of Constructivist, Discovery, Problem-Based, Experiential, and
-Inquiry-Based Teaching}'']
+``Why Minimal Guidance During Instruction Does Not Work:
+An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching'']
 Argues that inquiry-based learning is less effective for novices than
 guided instruction.
 \item[Lee:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/lee-create-inclusive-community-2015.pdf}{What
-can I do today to create a more inclusive community in CS?}''.]
+``What can I do today to create a more inclusive community in CS?''.]
 A brief, practical guide on exactly that with references to the research
 literature.
 \item[Mayer and Moreno:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/mayer-reduce-cognitive-load-2003.pdf}{Nine
-Ways to Reduce Cognitive Load in Multimedia Learning}'']
+``Nine Ways to Reduce Cognitive Load in Multimedia Learning'']
 Shows how research into how we absorb and process information can be
 applied to the design of instructional materials.
 \item[Porter et al:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/porter-what-works-2013.pdf}{Success
-in Introductory Programming: What Works?}'']
+``Success in Introductory Programming: What Works?'']
 Summarizes the evidence that three techniques---peer instruction, media
 computation, and pair programming---can significantly improve outcomes
 in introductory programming courses.
 \item[Wiggins and McTighe:
-``\href{\{\{\%20page.root\%20\}\}/files/papers/wiggins-mctighe-ubd-nutshell.pdf}{UbD
-in a Nutshell}'']
+``UbD in a Nutshell'']
 A four-page summary of the authors' take on reverse instructional
 design.
-\item[Wilson et al: ``\href{https://arxiv.org/abs/1609.00037}{Good
-Enough Practices in Scientific Computing}''.]
+\item[Wilson et al: ``Good Enough Practices in Scientific Computing''.]
 Describes and justifies a minimal set of computing practices that every
 researcher could and should adopt.
 \item[Wilson et al:
-``\href{http://www.plosbiology.org/article/info\%3Adoi\%2F10.1371\%2Fjournal.pbio.1001745}{Best
-Practices for Scientific Computing}'']
+``Best Practices for Scientific Computing'']
 Describes and justifies the practices that mature scientific software
 developers ought to use.
 \item[Wilson:
-``\href{http://f1000research.com/articles/3-62/v2}{Software Carpentry:
-Lessons Learned}'']
+``Software Carpentry: Lessons Learned'']
 Summarizes what we've learned in 17 years of running classes for
 scientists.
 \end{description}
