--- a/terms.tex
+++ b/terms.tex
@@ -107,12 +107,12 @@ the two major categories (educational psychology and instructional
 design) described above. It assumes you know as much as you need to
 about basic programming (our content knowledge).
 
-When it comes to PCK, we will
-\href{\{\{\%20page.root\%20\}\}/16-practices/}{see later} some of the
-PCK of the Software and Data Carpentry communities at work. Within
-Software Carpentry, we are also trying to support the curation of PCK by
-including an instructor's guide with each lesson that describes
-particular teaching techniques for that lesson's content.
+When it comes to PCK, we will \seccite{see later}{sec:practices} some
+of the PCK of the Software and Data Carpentry communities at
+work. Within Software Carpentry, we are also trying to support the
+curation of PCK by including an instructor's guide with each lesson
+that describes particular teaching techniques for that lesson's
+content.
 
 Finally, this training includes times for discussion, observation, and
 feedback, precisely so that participants are able to share their PCK
@@ -157,8 +157,7 @@ a myth}, as are the claims that the Internet is making us dumber or that
 young people read less than they used to.
 
 Computing education has its own myths. Mark Guzdial's
-``\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-10-myths-2015.pdf}{Top
-10 Myths About Teaching Computer Science}'' are:
+``Top 10 Myths About Teaching Computer Science}'' \cite{bib:guzdial-top10} are:
 
 The lack of women in Computer Science is just like all the other STEM
 fields.
@@ -207,19 +206,15 @@ literature ought to look like). Green's
 a Better Teacher}} is lighter but no less informative: it explores why
 educational reforms in the past 50 years have mostly missed the mark,
 and what we should be doing instead. The ultra-short summary
-``\href{\{\{\%20page.root\%20\}\}/files/papers/science-of-learning-2015.pdf}{Deans
-for Impact report}'' contains useful, practical insights, and is
+Deans for Impact report \cite{bib:deans-for-impact} contains useful, practical insights, and is
 required reading for this training.
 
 Pieces focusing specifically on computer science education include
 Guzdial's
-``\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-why-hard-to-teach-2011.pdf}{Why
-Programming is Hard to Teach}'' and
-``\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-10-myths-2015.pdf}{Top
-10 Myths About Teaching Computer Science}'', and Porter et al's
-``\href{\{\{\%20page.root\%20\}\}/files/papers/porter-what-works-2013.pdf}{Success
-in Introductory Programming: What Works?}'', all of which you should
-read before starting this class. \{: .callout\}
+``Why Programming is Hard to Teach'' \cite{bib:guzdial-hard} and
+``Top 10 Myths About Teaching Computer Science'' \cite{bib:guzdial-top10},
+and Porter et al's ``Success in Introductory Programming: What Works?'' \cite{bib:porter-what-works},
+all of which you should read before starting this class. \{: .callout\}
 \end{quote}
 
 \begin{discussion}{Three Kinds of Knowledge}{disc:three-kinds-of-knowledge}
