--- a/book.tex
+++ b/book.tex
@@ -2,9 +2,12 @@
 
 \author{Greg Wilson}
 
-\newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
-\newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\includegraphics}[1]{\textbf{#1}}
+
+\newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
+\newcommand{\chapref}[1]{Chapter~\ref{#1}}
+\newcommand{\href}[2]{#2\footnote{#1}}
+\newcommand{\secref}[1]{Section~\ref{#1}}
 
 \newenvironment{challenge}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
 \newenvironment{discussion}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
