Removing page.root references

--- a/carpentries.tex
+++ b/carpentries.tex
@@ -8,10 +8,8 @@ toward certification.
 \begin{quote}
 \subsection{Preparation and Discussion}\label{preparation-and-discussion}
 
-This discussion assumes that trainees have read the
-\href{\{\{\%20site.swc\_site\%20\}\}/workshops/operations/}{operations
-guide} (which is \href{\{\{\%20page.root\%20\}\}/12-summarize/}{assigned
-as overnight homework}). Instead of going through this material point by
+This discussion assumes that trainees have read the operations
+guide (which is assigned as overnight homework). Instead of going through this material point by
 point, trainers should ask each trainee to add one non-overlapping
 question to a list, then go through that list. \{: .callout\}
 \end{quote}
@@ -211,8 +209,7 @@ recommended instructors. \{: .callout\}
 \subsubsection{Materials}\label{materials}
 
 All of Software and Data Carpentry's lessons materials are freely
-available under a permissive
-\href{\{\{\%20page.root\%20\}\}/license/}{open license}. You may use
+available under a permissive open license. You may use
 them whenever and however you want, provided you cite the original
 source.
 
@@ -261,8 +258,8 @@ a Software Carpentry or Data Carpentry workshop if:
 
 Software Carpentry and Data Carpentry share a single instructor training
 program, but instructors must certify separately for each at the end:
-see the description of \href{\{\{\%20page.root\%20\}\}/checkout/}{the
-instructor checkout procedure} for details.
+see the description of the
+instructor checkout procedure for details.
 
 \subsubsection{Setting Up}\label{setting-up}
 
@@ -492,7 +489,7 @@ community:
 
 So being part of a friendly, open discussion, is of equal or greater
 importance to the community than submitting the perfect lesson change.
-The \href{\{\{\%20page.root\%20\}\}/checkout/}{checkout process} to
+The checkout process to
 become a fully-fledged instructor will be one way to start connecting to
 the community and find which area will allow you to contribute best.
 
