--- a/guide.tex
+++ b/guide.tex
@@ -1,4 +1,4 @@
-\chaplbl{Teacher's Guide}{s:guide}
+t\chaplbl{Teacher's Guide}{s:guide}
 
 \subsection{Checklists}\label{checklists}
 
@@ -74,7 +74,7 @@ many other things better too).
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Set up a one-page website for the workshop using
-  \url{https://github.com/swcarpentry/training-template} as a starting
+  \href{https://github.com/swcarpentry/training-template} as a starting
   point.
 \item
   Send the URL to the admins.
@@ -93,9 +93,7 @@ many other things better too).
 \item
   Create an Etherpad.
 \item
-  Email attendees
-  \href{\{\{\%20page.root\%20\}\}/files/messages/welcome.txt}{a welcome
-  message} that includes:
+  Email attendees a welcome message that includes:
 
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
@@ -126,12 +124,10 @@ many other things better too).
   Software Carpentry).
 \item
   Go through
-  \href{\{\{\%20page.root\%20\}\}/files/messages/checkout.txt}{the
-  checkout procedure} point by point.
+  the checkout procedure point by point.
 \item
   Explain how we
-  \href{\{\{\%20page.root\%20\}\}/files/messages/format.txt}{format
-  lesson submissions}. \{: .checklist\}
+  format lesson submissions. \{: .checklist\}
 \end{enumerate}
 \end{quote}
 
@@ -164,8 +160,7 @@ many other things better too).
   survey}.
 \item
   Email attendees about
-  \href{\{\{\%20page.root\%20\}\}/files/messages/checkout.txt}{the
-  checkout process}.
+  the checkout process.
 \item
   Debrief with the head of instructor training.
 \item
@@ -230,8 +225,7 @@ Sessions}\label{between-instructor-training-sessions}
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Send new instructors
-  \href{\{\{\%20page.root\%20\}\}/files/messages/completion.txt}{the
-  completion message}.
+  a completion message.
 \item
   Badge instructors in \href{\{\{\%20site.amy\_site\%20\}\}/}{AMY}.
 
@@ -269,23 +263,17 @@ trainees:
 \begin{itemize}
 \itemsep1pt\parskip0pt\parsep0pt
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/welcome.txt}{Welcome
-  participants before the workshop}
+  Welcome participants before the workshop.
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/checkout.txt}{Description
-  of checkout procedure sent immediately after the workshop}
+  Description of checkout procedure sent immediately after the workshop.
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/after-pr.txt}{Next
-  steps after receiving pull request}
+  Next steps after receiving pull request.
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/passive-discussion.txt}{Request
-  to do another discussion session when participant was passive}
+  Request to do another discussion session when participant was passive.
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/completion.txt}{Confirm
-  certification and describe next steps}
+  Confirm certification and describe next steps.
 \item
-  \href{\{\{\%20page.root\%20\}\}/files/messages/expiry.txt}{Notify
-  participants that they have not completed within the specified time}
+  Notify participants that they have not completed within the specified time.
 \end{itemize}
 
 \subsection{Introduction}\label{introduction}
@@ -611,8 +599,7 @@ is that every such failure reinforces the belief that computing is hard,
 and that they'd have a better chance of making next Thursday's
 conference submission deadline if they kept doing things the way they
 always have. For these reasons, we have adopted a ``teach most
-immediately useful first'' approach described in
-\href{\{\{\%20page.root\%20\}\}/19-motivation/}{this episode}.
+immediately useful first'' approach described in \secref{s:motivation}.
 
 \begin{quote}
 \subsection{Software Carpentry Is Not Computer
@@ -729,7 +716,7 @@ part of a trainee's checkout procedure.
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Sign up to lead the demo at
-  \url{http://pad.software-carpentry.org/teaching-demos}.
+  \href{http://pad.software-carpentry.org/teaching-demos}.
 \item
   For each trainee, pick a suitable starting point in the lesson that
   they have chosen. Do not start at the very beginning of the first
@@ -785,9 +772,7 @@ part of a trainee's checkout procedure.
   After the five minute timer, allow them to finish their sentence and
   tell them time's up.
 \item
-  Use a
-  \href{\{\{\%20page.root\%20\}\}/files/teaching-demo-rubric.md}{rubric}
-  for notes.
+  Use a rubric for notes.
 \item
   After the trainee is finished, first ask how they themselves thought
   it went, then give constructive feedback based on your notes.
@@ -811,7 +796,7 @@ part of a trainee's checkout procedure.
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Sign up for your next session in
-  \url{http://pad.software-carpentry.org/teaching-demos}.
+  \href{http://pad.software-carpentry.org/teaching-demos}.
 \item
   Add pass/fail information for the trainees in AMY.
 \end{itemize}
@@ -978,8 +963,9 @@ process would require a lot of resources to set up and run.
 \subsection{Effecting Change}\label{effecting-change}
 
 Henderson et al's
-``\href{\{\{\%20page.root\%20\}\}/files/papers/henderson-facilitating-stem-teaching-change-2011.pdf}{Facilitating
-Change in Undergraduate STEM Instructional Practices}'' discusses ways
+``Facilitating Change in Undergraduate STEM Instructional Practices''
+\cite{bib:henderson-facilitating}
+discusses ways
 to get educational institutions to actually change what they teach.
 Their findings are summarized in this table:
 
@@ -1122,12 +1108,11 @@ As far as is practical, our teaching methods are based on the best
 available evidence. We wish we could say the same about our content, but
 very little research has been done on what researchers actually use and
 what impact it has on productivity. An example of what we wish existed
-is
-\href{\{\{\%20page.root\%20\}\}/files/papers/stefik-evidence-2016.pdf}{this
-summary} by Stefik et al of empirical research on the usability of
-programming languages (while
-\href{https://dl.acm.org/citation.cfm?id=2534973}{this full-length
-paper} gives an idea of what's possible). \{: .callout\}
+is the summary by Stefik et al of empirical research on the usability of
+programming languages \cite{bib:stefik-summary}
+(while
+their  full-length paper gives an idea of what's possible \cite{bib:stefik-fixme}).
+\{: .callout\}
 \end{quote}
 
 \subsection{Why We're Not a MOOC}\label{why-were-not-a-mooc}
