--- a/lessons.tex
+++ b/lessons.tex
@@ -229,31 +229,30 @@ for each level.
 
 Here is an example of a successively-improved lesson objective:
 
-\begin{longtable}[c]{@{}ll@{}}
-\toprule
-Learning Objective & Discussion\tabularnewline
-\midrule
-\endhead
-Learner will be given opportunities to learn good programming practices.
-& Describes the lesson's content, not the attributes of successful
-students.\tabularnewline
-Learner will have a better appreciation for good programming practices.
-& Doesn't start with an active verb or define the level of learning, and
-the subject of learning has no context and is not
-specific.\tabularnewline
-Learner will understand principles of good programming. & Starts with an
-active verb, but doesn't define the level of learning, and the subject
-of learning is still too vague for assessment.\tabularnewline
-Learner will write one-page data analysis scripts for research purposes
-using R Studio. & Starts with an active verb, defines the level of
-learning, and provides context to ensure that outcomes can be
-assessed.\tabularnewline
-\bottomrule
-\end{longtable}
+\begin{itemize}
+\item
+  \textit{Learner will be given opportunities to learn good programming practices.}
+  \\
+  Describes the lesson's content, not the attributes of successful students.
+\item
+  \textit{Learner will have a better appreciation for good programming practices.}
+  \\
+  Doesn't start with an active verb or define the level of learning,
+  and the subject of learning has no context and is not specific.
+\item
+  \textit{Learner will understand principles of good programming.}
+  \\
+  Starts with an active verb, but doesn't define the level of learning,
+  and the subject of learning is still too vague for assessment.
+\item
+  \textit{Learner will write one-page data analysis scripts for research purposes using R Studio.}
+  \\
+  Starts with an active verb, defines the level of learning,
+  and provides context to ensure that outcomes can be assessed.
+\end{itemize}
 
 Baume's guide to
-\href{\{\{\%20page.root\%20\}\}/files/papers/baume-learning-outcomes-2009.pdf}{writing
-and using good learning outcomes} is a good longer discussion of these
+writing and using good learning outcomes \cite{bib:baume-fixme} is a good longer discussion of these
 issues.
 
 \begin{challenge}{Evaluate SWC and DC Learning Objectives}{chal:evaluate-swc-and-dc-learning-objectives}
@@ -404,8 +403,8 @@ productivity. \{: .solution\}
 \subsection{The Minimal Manual}\label{the-minimal-manual}
 
 Carroll et al's 1987 paper
-``\href{\{\{\%20page.root\%20\}\}/files/papers/carroll-minimal-manual-1987.pdf}{The
-Minimal Manual}'' outlines an approach to documentation and instruction
+``The Minimal Manual'' \cite{bib:carroll-minimal-manual}
+outlines an approach to documentation and instruction
 in which each lesson is one page long and describes how to accomplish
 one concrete task. Its focus on immediate application, error recognition
 and recovery, and reference use after training makes it an interesting
