--- a/live.tex
+++ b/live.tex
@@ -63,7 +63,7 @@ and forth to another.
 \begin{challenge}{I/We/You vs.~You/Y'all/We}{chal:iweyou-vs-youyallwe}
 
 Live coding is an example of the ``I/We/You'' approach to teaching
-\href{\{\{\%20page.root\%20\}\}/05-performance/}{discussed earlier}.
+discussed in \secref{sec:performance}.
 \end{challenge}
 
 \begin{challenge}{Up and Down}{chal:up-and-down}
