--- a/novice.tex
+++ b/novice.tex
@@ -51,8 +51,7 @@ has three stages:
 \item
   An \emph{expert} is someone who can easily handle situations that are
   out of the ordinary, diagnose the causes of problems, and so on. We
-  will discuss expertise in more detail in
-  \href{\{\{\%20page.root\%20\}\}/08-memory/}{a later lesson}.
+  will discuss expertise in more detail in \secref{sec:memory}.
 \end{itemize}
 
 We assume that most learners coming to Software/Data Carpentry lessons
