--- a/practices.tex
+++ b/practices.tex
@@ -209,9 +209,7 @@ violated the Code of Conduct, you may warn them, ask them to apologize,
 and/or expel them, depending on the severity of the violation and
 whether or not you believe it was intentional. No matter what you choose
 to do, you should contact the appropriate Carpentry administrator at
-\href{mailto:admin@software-carpentry.org}{\nolinkurl{admin@software-carpentry.org}}
-or
-\href{mailto:admin@datacarpentry.org}{\nolinkurl{admin@datacarpentry.org}}
+\texttt{admin@software-carpentry.org}
 as soon as you can, and describe what happened in the next online
 debriefing session that you're able to attend.
 
