--- a/terms.tex
+++ b/terms.tex
@@ -107,7 +107,7 @@ the two major categories (educational psychology and instructional
 design) described above. It assumes you know as much as you need to
 about basic programming (our content knowledge).
 
-When it comes to PCK, we will \seccite{see later}{sec:practices} some
+When it comes to PCK, we will see later \secref{sec:practices} some
 of the PCK of the Software and Data Carpentry communities at
 work. Within Software Carpentry, we are also trying to support the
 curation of PCK by including an instructor's guide with each lesson
@@ -125,9 +125,8 @@ with each other over the course of the next two days.
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Gelman and Nolan's
-  \emph{\href{http://www.amazon.com/Teaching-Statistics-Tricks-Andrew-Gelman/dp/0198572247/}{Teaching
-  Statistics: A Bag of Tricks}} is full of PCK for teaching introductory
-  statistics.
+  \textit{Teaching   Statistics: A Bag of Tricks} \cite{bib:gelman-nolan-stats-tricks}
+  is full of PCK for teaching introductory statistics.
 \item
   The \href{http://csteachingtips.org/}{CS Teaching Tips} site is
   gathering similar ideas for computing. \{: .callout\}
@@ -142,22 +141,21 @@ scheme} characterizes learners as visual, auditory, or kinesthetic
 according to whether they like to see things, hear things, or do things.
 This scheme is easy to understand, but as de Bruyckere and colleagues
 point out in
-\emph{\href{https://www.amazon.com/Urban-Myths-about-Learning-Education/dp/0128015373/}{Urban
-Myths About Learning and Education}}, it is almost certainly false.
+\textit{Urban Myths About Learning and Education} \cite{bib:debruyckere-urban-myths},
+it is almost certainly false.
 Unfortunately, that hasn't stopped a large number of companies from
 marketing products based on it to parents and school boards.
 
 This is not the only myth to plague education. The learning pyramid that
 shows we remember 10\% of what we read, 20\% of what we hear, and so on?
-\href{https://www.amazon.com/Urban-Myths-about-Learning-Education/dp/0128015373/}{Myth}.
+Myth.
 The idea that ``brain games'' can improve our intelligence, or at least
 slow its decline in old age?
-\href{https://www.amazon.com/Urban-Myths-about-Learning-Education/dp/0128015373/}{Also
-a myth}, as are the claims that the Internet is making us dumber or that
+Also a myth, as are the claims that the Internet is making us dumber or that
 young people read less than they used to.
 
 Computing education has its own myths. Mark Guzdial's
-``Top 10 Myths About Teaching Computer Science}'' \cite{bib:guzdial-top10} are:
+``Top 10 Myths About Teaching Computer Science'' \cite{bib:guzdial-top10} are:
 
 The lack of women in Computer Science is just like all the other STEM
 fields.
@@ -186,8 +184,8 @@ Some people are just born to program.
 The last of these---the idea that there is a ``geek gene''---is as
 pervasive as it is damaging. Elizabeth Patitsas and others have shown
 that, contrary to a widely-held belief,
-\href{http://dl.acm.org/citation.cfm?id=2960312}{grades in computing
-classes are \emph{not} bimodal}, i.e., there isn't one group that gets
+grades in computing classes are \emph{not} bimodal \cite{bib:patitsas-cs-grades},
+i.e., there isn't one group that gets
 it and another that doesn't. Many of the participants in our workshops
 have advanced degrees in intellectually demanding subjects, but have
 convinced themselves that they just don't have what it takes to be
@@ -199,11 +197,9 @@ a service.
 
 An excellent overview of research results in education and learning is
 Ambrose et al's
-\emph{\href{http://www.amazon.com/How-Learning-Works-Research-Based-Jossey-Bass/dp/0470484101/}{How
-Learning Works}} (which is also an excellent example of what secondary
-literature ought to look like). Green's
-\emph{\href{http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393081591/}{Building
-a Better Teacher}} is lighter but no less informative: it explores why
+\textit{How Learning Works} \cite{bib:ambrose-hlw} (which is also an excellent example of what secondary
+literature ought to look like).  Green's
+\textit{Building a Better Teacher} \cite{bib:greene-babt} is lighter but no less informative: it explores why
 educational reforms in the past 50 years have mostly missed the mark,
 and what we should be doing instead. The ultra-short summary
 Deans for Impact report \cite{bib:deans-for-impact} contains useful, practical insights, and is
