--- a/memory.tex
+++ b/memory.tex
@@ -7,7 +7,7 @@ expertise.
 
 \subsection{Connectivity}\label{connectivity}
 
-An \href{\{\{\%20page.root\%20\}\}/03-novice/}{earlier topic} described
+\secref{sec:novice} described
 the key difference between novices and competent practitioners. What
 makes experts different from either? The answer is not that they know
 more facts: competent practitioners can memorize a lot of trivia without
@@ -83,8 +83,8 @@ Experts often betray their blind spot by using the word ``just'' in
 explanations, as in, ``Oh, it's easy, you just fire up a new virtual
 machine and then you just install these four patches to Ubuntu and then
 you just re-write your entire program in a pure functional style---no
-problem.'' As \href{\{\{\%20page.root\%20\}\}/19-motivation/}{we discuss
-later}, the J word (also sometimes called the passive dismissive
+problem.'' As we discuss later in \secref{sec:motivation},
+the J word (also sometimes called the passive dismissive
 adjective) is banned in our workshops, primarily because using it gives
 learners the very clear signal that the instructor thinks their problem
 is trivial and that they therefore must be stupid. \{: .callout\}
@@ -138,10 +138,9 @@ It}\label{theres-more-than-one-way-to-do-it}
 Concept maps are just one way to represent our understanding of a
 subject. Flowcharts, decision trees, and blueprints can be even more
 useful in some contexts. For example,
-\href{\{\{\%20page.root\%20\}\}/files/choosing-a-good-chart-09.pdf}{this
-diagram} (taken from
-\href{http://extremepresentation.typepad.com/blog/2006/09/choosing\_a\_good.html}{a
-blog post} by Andrew Abela) is an excellent way to organize and present
+\href{fixme-abela}{this diagram}
+(taken from \href{http://extremepresentation.typepad.com/blog/2006/09/choosing\_a\_good.html}{a blog post}
+by Andrew Abela) is an excellent way to organize and present
 an understanding of how to choose the right kinds of chart for
 displaying different kinds of data. \{: .callout\}
 \end{quote}
