--- a/motivation.tex
+++ b/motivation.tex
@@ -38,8 +38,7 @@ graphical editors save things to the user's desktop or home directory.
 If people need to run shell commands on the files they've edited, a
 substantial fraction won't be able to navigate to the right directory
 without help. If this seems like a small problem to you, please revisit
-the discussion of \href{\{\{\%20page.root\%20\}\}/08-memory/}{expert
-blind spot}. \{: .callout\}
+the discussion of expert blind spot \secref{sec:memory}. \{: .callout\}
 \end{quote}
 
 Many of the foundational concepts of computer science, such as
@@ -57,8 +56,8 @@ us, so that if it takes longer to get to the payoff of a later topic,
 they'll stick with us.
 
 Perhaps the best-studied use of this idea is the
-\emph{\href{\{\{\%20page.root\%20\}\}/files/papers/guzdial-mediacomp-retrospective-2013.pdf}{media
-computation}} approach developed by Guzdial and Ericson at Georgia Tech.
+media computation approach developed by Guzdial and Ericson at Georgia Tech
+\cite{bib:guzdial-mediacomp-retrospective}.
 Instead of printing ``hello world'' or summing the first ten integers,
 their students' first program opens an image, resizes it to create at
 thumbnail, and saves the result. This is an \emph{authentic task}, i.e.,
@@ -100,7 +99,7 @@ their research. After the grep lesson, I show a one liner that combines
 \texttt{head}, \texttt{grep}, \texttt{sort}, and \texttt{uniq} to
 produce a ranked list of the most abundant sequences. I emphasize that
 the students just learned each of the pieces (see
-\url{https://wikis.utexas.edu/display/bioiteam/Scott's+list+of+linux+one-liners}).
+\href{https://wikis.utexas.edu/display/bioiteam/Scott's list of linux one-liners}).
 This way, I connect my bioinformatics users with domain-specific
 examples using an authentic task that is relevant to their research. \{:
 .callout\}
@@ -118,8 +117,7 @@ past, and identify one thing the instructor did that motivated you.
 \subsection{Not Just Learners}\label{not-just-learners}
 
 What's missing from this list is strategies to motivate the
-\emph{instructor}. As we said in
-\href{\{\{\%20page.root\%20\}\}/02-introduction/}{the introduction},
+\emph{instructor}. As we said in \secref{sec:intro},
 learners respond to an instructor's enthusiasm, and instructors need to
 care about a topic in order to keep teaching it, particularly when they
 are volunteers. \{: .callout\}
@@ -129,9 +127,7 @@ are volunteers. \{: .callout\}
 
 We all have a different motivation for teaching, and that is a really
 good thing! SWC wants instructors with diverse backgrounds because you
-each bring something unique to our community. Read the
-\href{\{\{\%20page.root\%20\}\}/guide/\#testimonials}{testimonials} from
-other instructors, to see what motivates them to teach. After this
+each bring something unique to our community. After this
 class, or during a break, write a short explanation of what motivates
 you to teach. Save this as part of your teaching philosophy for future
 reference.
@@ -139,8 +135,7 @@ reference.
 
 \subsection{Demotivation}\label{demotivation}
 
-As noted in \href{\{\{\%20page.root\%20\}\}/02-introduction/}{the
-introduction}, we are privileged: most of our learners are physically
+As noted in \secref{sec:intro}, we are privileged: most of our learners are physically
 safe, well fed, well educated, and highly motivated. Our challenge is
 therefore not demotivating them.
 
@@ -177,8 +172,7 @@ Workshop}\label{things-you-shouldnt-do-in-a-workshop}
   if you are frank about the limitations of your knowledge, and will be
   more likely to ask questions and seek help.
 \item
-  Use the J word (``just''). As
-  \href{\{\{\%20page.root\%20\}\}/08-memory/}{discussed earlier}, this
+  Use the J word (``just''). As discussed in \secref{sec:memory}, this
   signals to the learner that the instructor thinks their problem is
   trivial and by extension that they therefore must be stupid for not
   being able to figure it out.
@@ -436,9 +430,9 @@ various sexual orientations, the elderly, the physically challenged, the
 formerly incarcerated, the economically disadvantaged, and everyone else
 who doesn't fit Silicon Valley's white/Asian male demographic. Lee's
 paper
-``\href{\{\{\%20page.root\%20\}\}/files/papers/lee-create-inclusive-community-2015.pdf}{What
-can I do today to create a more inclusive community in CS?}'' (which you
-were asked to read before the workshop) is a brief, practical guide to
+``What can I do today to create a more inclusive community in CS?''
+\cite{bib:lee-create-inclusive-community}
+is a brief, practical guide to
 doing that with references to the research literature. These help
 learners who belong to one or more margainalized or excluded groups, but
 help motivate everyone else as well; while they are phrased in terms of
@@ -470,8 +464,8 @@ term-long courses, many can be applied in our workshops, such as:
 \itemsep1pt\parskip0pt\parsep0pt
 \item
   Pick one activity or change in practice from
-  \href{\{\{\%20page.root\%20\}\}/files/papers/lee-create-inclusive-community-2015.pdf}{Lee's
-  paper} that you would like to work on.
+  Lee's paper \cite{bib:lee-create-inclusive-community}
+  that you would like to work on.
 \item
   Put a reminder in your calendar three months in the future to
   self-check whether you have done something about it.
