Removing some GitHub references

--- a/carpentries.tex
+++ b/carpentries.tex
@@ -279,8 +279,7 @@ your local location and today's date.
 \end{challenge}
 
 We also have
-\href{https://github.com/swcarpentry/windows-installer/releases/download/v0.3/SWCarpentryInstaller.exe}{a
-small installer for Windows} to help people set up their environment,
+a small installer for Windows to help people set up their environment,
 which is maintained in
 \href{https://github.com/swcarpentry/windows-installer}{this GitHub
 repository}. This installer runs \emph{after} the installer that puts
@@ -348,9 +347,9 @@ communities:
   \begin{itemize}
   \itemsep1pt\parskip0pt\parsep0pt
   \item
-    \href{\{\{\%20site.dc\_github\%20\}\}}{Data Carpentry on GitHub}
+    \href{https://github.com/datacarpentry}{Data Carpentry on GitHub}
   \item
-    \href{\{\{\%20site.swc\_github\%20\}\}}{Software Carpentry on GitHub}
+    \href{https://github.com/swcarpentry}{Software Carpentry on GitHub}
   \end{itemize}
 \item
   Both Software and Data Carpentry have public discussion lists that
@@ -396,16 +395,7 @@ via ``bug fixes'' as we go along.
 \subsubsection{Lesson Contribution}\label{lesson-contribution}
 
 The lesson materials for Software and Data Carpentry are hosted on
-GitHub:
-
-\begin{itemize}
-\itemsep1pt\parskip0pt\parsep0pt
-\item
-  \href{\{\{\%20site.dc\_github\%20\}\}}{Data Carpentry on GitHub}
-\item
-  \href{\{\{\%20site.swc\_github\%20\}\}}{Software Carpentry on GitHub}
-\end{itemize}
-
+GitHub
 and are developed collaboratively---in 2015 alone, almost 200 people
 made contributions to various lessons. Each lesson is in a separate
 repository, and consists of narrative lesson material and an associated
