--- a/guide.tex
+++ b/guide.tex
@@ -245,9 +245,7 @@ Sessions}\label{between-instructor-training-sessions}
     Submit.
   \end{enumerate}
 \item
-  Create and send
-  \href{\{\{\%20site.swc\_github\%20\}\}/certification}{PDF
-  certificates}. \{: .checklist\}
+  Create and send PDF certificates. \{: .checklist\}
 \end{enumerate}
 \end{quote}
 
